5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4148/executions/1723_2508.log
== TEST (2019-05-14 10:47:56) 
-- CODE:
from math import*

n = float(input("n: "))

soma = 3
i = 1
fim = n

while(i < fim):
	soma = soma + ((-1) ** (i * 1)) * (4 / ((i * 2 )(i * 2 + 1) * (i * 2 + 2)))
	i=i+1
	
print(round(soma, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    soma = soma + ((-1) ** (i * 1)) * (4 / ((i * 2 )(i * 2 + 1) * (i * 2 + 2)))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:49:52) 
-- CODE:
from math import*

n = float(input("n: "))

soma = 3
i = 1
fim = n

while(i < fim):
	soma = soma + ((-1) ** (i * 1)) * (4 / ((i * 2 ) * (i * 2 + 1) * (i * 2 + 2))
	i = i + 1
	
print(round(soma, 8))
-- ERROR:
File "XXXX", line 11
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:49:54) 
-- CODE:
from math import*

n = float(input("n: "))

soma = 3
i = 1
fim = n

while(i < fim):
	soma = soma + ((-1) ** (i * 1)) * (4 / ((i * 2 ) * (i * 2 + 1) * (i * 2 + 2))
	i = i + 1
	
print(round(soma, 8))
-- ERROR:
File "XXXX", line 11
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:49:54) 
-- CODE:
from math import*

n = float(input("n: "))

soma = 3
i = 1
fim = n

while(i < fim):
	soma = soma + ((-1) ** (i * 1)) * (4 / ((i * 2 ) * (i * 2 + 1) * (i * 2 + 2))
	i = i + 1
	
print(round(soma, 8))
-- ERROR:
File "XXXX", line 11
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:50:01) 
-- CODE:
from math import*

n = float(input("n: "))

soma = 3
i = 1
fim = n

while(i < fim):
	soma = soma + ((-1) ** (i * 1)) * (4 / ((i * 2 ) * (i * 2 + 1) * (i * 2 + 2)))
	i = i + 1
	
print(round(soma, 8))
-- OUTPUT:
2.86031746
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:52:37) 
-- CODE:
from math import*

n = float(input("n: "))

soma = 3
i = 1
fim = n

while(i < fim):
	soma = soma + ((-1) ** (i * 1)) * (4 / ((i * 2 ) * (i * 2 + 1) * (i * 2 + 2)))
	i = i + 1
	
print(round(soma, 8))
-- EXECUTION TIME:
0.200724
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
2.86031746
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
2.85838393
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
2.85844367
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
